--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer>
-  <p class="text-xs-center">© Copyright 2019. All rights reserved.</p>
+  <a href="https://github.com/jance1499/uoss-app">Feel free to contribute!</a>
 </footer>
