Cleaned up home page layout

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h1 class="display-4">UOSS App</h1>
+  <h1 class="display-5">UOSS App</h1>
   <p class="lead">Currently in development</p>
 </div>
 <div class="row home-cards">
@@ -13,7 +13,7 @@
       <div class="card-body">
         <h5 class="card-title">We recommend Mudlet</h5>
         <p class="card-text">
-          It's free and we offer packages that can be imported into Mudlet.
+          It's free and we offer packages that can be imported.
         </p>
         <a href="https://www.mudlet.org/" class="btn btn-primary">Download</a>
       </div>
@@ -23,7 +23,7 @@
     <div class="card">
       <img
         src="./assets/uossmud-graphic-logo.png"
-        class="card-img-top"
+        class="card-img-top mx-auto"
         alt="uossm logo"
       />
       <div class="card-body">
@@ -37,12 +37,13 @@
     <div class="card">
       <img
         src="./assets/github-logo.png"
-        class="card-img-top"
+        class="card-img-top mx-auto"
         alt="github logo"
+        style="height:120px;width:120px"
       />
       <div class="card-body">
         <h5 class="card-title">Contribute</h5>
-        <a href="https://github.com/jance1499/uoss-app">uoss-app GitHub</a>
+        <a href="https://github.com/jance1499/uoss-app">uoss-app</a>
       </div>
     </div>
   </div>
