Resized images and centered text on Home screen

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,11 +4,12 @@
 </div>
 <div class="row home-cards">
   <div class="col-sm-4 ">
-    <div class="card">
+    <div class="card text-center">
       <img
         src="./assets/mudlet-wp-logo.png"
-        class="card-img-top"
+        class="card-img-top mx-auto"
         alt="mudlet logo"
+        style="height:80px;width:220px"
       />
       <div class="card-body">
         <h5 class="card-title">We recommend Mudlet</h5>
@@ -20,7 +21,7 @@
     </div>
   </div>
   <div class="col-sm-4">
-    <div class="card">
+    <div class="card text-center">
       <img
         src="./assets/uossmud-graphic-logo.png"
         class="card-img-top mx-auto"
@@ -34,7 +35,7 @@
     </div>
   </div>
   <div class="col-sm-2">
-    <div class="card">
+    <div class="card text-center">
       <img
         src="./assets/github-logo.png"
         class="card-img-top mx-auto"
