--- a/src/app/speedwalks/speedwalks.component.html
+++ b/src/app/speedwalks/speedwalks.component.html
@@ -18,16 +18,16 @@
 <table class="table table-sm m-3">
   <thead>
     <tr>
-      <th scope="col">Speedwalk</th>
-      <th scope="col">Interest</th>
+      <th scope="col">Directions</th>
+      <th scope="col">Category</th>
       <th scope="col">Description</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <td>
-        <button class="btn btn-light" tooltip="Copy to clipboard"><fa-icon [icon]="faCopy"></fa-icon></button
-          >w|w|ff3|say hidon
+        <button class="btn btn-light" title="Copy to clipboard"><fa-icon [icon]="faCopy"></fa-icon></button>
+          w|w|ff3|say hidon
       </td>
       <td>
         Secret Hunt
