--- a/src/app/speedwalks/speedwalks.component.html
+++ b/src/app/speedwalks/speedwalks.component.html
@@ -1,3 +1,19 @@
+<div aria-live="polite" aria-atomic="true" style="position: relative; min-height: 200px;">
+  <div class="toast" style="position: absolute; top: 0; right: 0;">
+    <div class="toast-header">
+      <img src="..." class="rounded mr-2" alt="...">
+      <strong class="mr-auto">Bootstrap</strong>
+      <small>11 mins ago</small>
+      <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="toast-body">
+      Hello, world! This is a toast message.
+    </div>
+  </div>
+</div>
+
 <form>
   <div class="form-group row">
     <label for="inputSearch" class="col-sm-1 col-form-label m-3">Search</label>
@@ -7,10 +23,10 @@
   </div>
   <div class="form-group row">
     <label for="inputDelimiter" class="col-sm-1 col-form-label m-3"
-      >Delimiter</label
-    >
+      >Delimiter
+    </label>
     <div class="col-sm-1 m-3">
-      <input type="text" class="form-control" id="inputDelimiter" />
+      <input type="text" class="form-control" id="inputDelimiter" value=";" />
     </div>
   </div>
 </form>
@@ -24,16 +40,22 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
+    <tr *ngFor="let speedwalk of speedwalks">
       <td>
-        <button class="btn btn-light" title="Copy to clipboard"><fa-icon [icon]="faCopy"></fa-icon></button>
-          w|w|ff3|say hidon
+        <button
+          class="btn btn-light"
+          title="Copy to clipboard"
+          (click)="onCopy(speedwalk.directions)"
+        >
+          <fa-icon [icon]="faCopy"></fa-icon>
+        </button>
+        {{ speedwalk.directions }}
       </td>
       <td>
-        Secret Hunt
+        {{ speedwalk.category }}
       </td>
       <td>
-        Hidon Bone
+        {{ speedwalk.description }}
       </td>
     </tr>
   </tbody>
