Area component added

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,6 +6,9 @@
         <a class="nav-link" routerLink="/home">Home</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" routerLink="/areas">Areas</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" routerLink="/speedwalks">Speedwalks</a>
       </li>
     </ul>
