Corrected typo from mudlet to cmud

--- a/src/app/speedwalks/speedwalks.component.html
+++ b/src/app/speedwalks/speedwalks.component.html
@@ -33,12 +33,12 @@
   <div class="col-sm-1 m-3">
     <button
       class="btn btn-light icon-mudlet"
-      title="Copy all Mudlet speedwalks script to clipboard"
+      title="Copy all Mudlet speedwalks aliases to clipboard"
       (click)="onMudletAliasCreationScript()"
     ></button>
     <button
       class="btn btn-light icon-cmud"
-      title="Copy all Mudlet speedwalks script to clipboard"
+      title="Copy all CMUD speedwalks aliases to clipboard"
       (click)="onCmudAliasCreationScript()"
     ></button>
   </div>
