Added equipment module

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,6 +11,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/speedwalks">Speedwalks</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/equipment">Equipment</a>
+      </li>
     </ul>
   </div>
 </nav>
