Applied Bootstrap Darkly theme

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md bg-dark navbar-dark ">
+<nav class="navbar navbar-expand-lg bg-primary navbar-dark">
   <div class="navbar-brand">UOSS</div>
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav mr-auto">
