Changed to dark cards

--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -1,6 +1,6 @@
 <div class="row no-gutters">
   <div *ngFor="let equip of equipment">
-      <div class="card text-black bg-light ml-3 mb-3" style="min-width: 400px;">
+      <div class="card text-black bg-dark ml-3 mb-3" style="min-width: 400px;">
         <div class ="card-title card-header text-center">
           {{equip.slot}}
         </div>
