--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -1,4 +1,4 @@
-<div class="card-group">
+<div class="row ml-3 mb-3">
   <div *ngFor="let equip of equipment">
       <div class="card text-black bg-dark border-primary ml-3 mb-3" style="min-width: 18rem;">
         <div class ="card-title card-header text-center">
