--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
         src="./assets/mudlet-wp-logo.png"
         class="card-img-top mx-auto"
         alt="mudlet logo"
-        style="height:80px;width:220px"
+        style="height:80px;width:220px;margin:10px"
       />
       <div class="card-body">
         <h5 class="card-title">We recommend Mudlet</h5>
@@ -26,7 +26,7 @@
         src="./assets/github-logo.png"
         class="card-img-top mx-auto"
         alt="github logo"
-        style="height:120px;width:120px"
+        style="height:120px;width:120px;margin:10px"
       />
       <div class="card-body">
         <h5 class="card-title">Contribute</h5>
