--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,18 +1,21 @@
 <nav class="navbar navbar-expand-lg bg-primary navbar-dark mb-3">
-  <div class="navbar-brand">UOSS</div>
-  <div class="collapse navbar-collapse" id="navbarCollapse">
+  <a class="navbar-brand" href="#">UOSS</a>
+  <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
+    &#9776;
+  </button>
+  <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/home">Home</a>
+        <a class="nav-link" routerLink="/home" (click)="isMenuCollapsed = true">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/areas">Areas</a>
+        <a class="nav-link" routerLink="/areas" (click)="isMenuCollapsed = true">Areas</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/speedwalks">Speedwalks</a>
+        <a class="nav-link" routerLink="/speedwalks" (click)="isMenuCollapsed = true">Speedwalks</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/equipment">Equipment</a>
+        <a class="nav-link" routerLink="/equipment" (click)="isMenuCollapsed = true">Equipment</a>
       </li>
     </ul>
   </div>
