--- a/src/app/speedwalks/speedwalks.component.html
+++ b/src/app/speedwalks/speedwalks.component.html
@@ -6,8 +6,16 @@
     >Copied to clipboard!</ngb-alert
   >
 </div>
+
 <div class="row">
-  <label for="inputSearch" class="col-sm-1 col-form-label m-3">Search</label>
+  <div class="col-sm-12">
+    <div class="btn btn-primary float-right m-3" (click)="openModal()">
+      Add Speedwalk
+    </div>
+  </div>
+</div>
+<div class="row">
+  <label for="inputSearch" class="col-sm-1 m-3 col-form-label">Search</label>
   <div class="col-sm-4 m-3">
     <input
       type="text"
@@ -49,7 +57,7 @@
   </div>
 </div>
 
-<table class="table table-sm m-3">
+<table class="table table-sm m-3" style="table-layout: fixed;">
   <thead>
     <tr>
       <th scope="col">Directions</th>
@@ -59,7 +67,7 @@
   </thead>
   <tbody>
     <tr *ngFor="let speedwalk of speedwalks">
-      <td>
+      <td class="text-truncate">
         <button
           class="btn"
           title="Copy to clipboard"
@@ -77,7 +85,7 @@
           title="Copy CMUD alias to clipboard"
           (click)="onCopyCmudAlias(speedwalk)"
         ></button>
-        {{ speedwalk.directions.join(delimiter) }}
+          {{ speedwalk.directions.join(delimiter) }}
       </td>
       <td>
         {{ speedwalk.category }}
