--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -1,9 +1,41 @@
-<div class="row mb-3 ml-3">
-  <div *ngFor="let weaponType of weaponTypes | keyvalue; asIsOrder">
+<div class="text-center mb-3">
+  <div
+    class="btn btn-lg"
+    [ngClass]="isAllWeapons ? 'btn-primary' : 'btn-secondary'"
+    (click)="toggleAllWeapons()"
+    role="button"
+    area-pressed="true"
+  >
+    Toggle All Weapons
+  </div>
+  <div
+    class="btn btn-lg ml-3"
+    [ngClass]="isAllArmor ? 'btn-primary' : 'btn-secondary'"
+    (click)="toggleAllArmor()"
+    role="button"
+    area-pressed="true"
+  >
+    Toggle All Armor
+  </div>
+  <div
+  class="btn btn-lg ml-3"
+  [ngClass]="isAllEquipment ? 'btn-primary' : 'btn-secondary'"
+  (click)="toggleAllEquipment()"
+  role="button"
+  area-pressed="true"
+>
+  Toggle All Equipment
+</div>
+</div>
+
+<div class="text-center">
+  <div class="btn-group" *ngFor="let weaponType of weaponTypes | keyvalue">
     <div
-      id="{{weaponType.value}}"
+      id="{{ weaponType.value }}"
       class="btn btn-lg ml-3 mb-3"
-      [ngClass]="!isFiltered(weaponType.value) ? 'btn-primary' : 'btn-secondary'"
+      [ngClass]="
+        !isFiltered(weaponType.value) ? 'btn-primary' : 'btn-secondary'
+      "
       (click)="onClickFilterToggle(weaponType.value)"
       role="button"
       aria-pressed="true"
@@ -11,7 +43,27 @@
       {{ weaponType.value }}
     </div>
   </div>
-  <div *ngFor="let armorType of armorTypes | keyvalue; asIsOrder">
+</div>
+
+<div class="text-center ml-3">
+  <div class="btn-group" *ngFor="let weaponType of weaponTypes2 | keyvalue">
+    <div
+      id="{{ weaponType.value }}"
+      class="btn btn-lg ml-3 mb-3"
+      [ngClass]="
+        !isFiltered(weaponType.value) ? 'btn-primary' : 'btn-secondary'
+      "
+      (click)="onClickFilterToggle(weaponType.value)"
+      role="button"
+      aria-pressed="true"
+    >
+      {{ weaponType.value }}
+    </div>
+  </div>
+</div>
+
+<div class="text-center">
+  <div class="btn-group" *ngFor="let armorType of armorTypes | keyvalue">
     <div
       class="btn btn-lg ml-3 mb-3"
       [ngClass]="!isFiltered(armorType.value) ? 'btn-primary' : 'btn-secondary'"
@@ -22,131 +74,170 @@
       {{ armorType.value }}
     </div>
   </div>
+</div>
 
-  <div class="row ml-3 mb-3 mt-3">
-    <div *ngFor="let equip of equipment">
-      <div
-        *ngIf="!isFiltered(equip.slotType)"
-        class="card text-black bg-dark border-primary ml-3 mb-3"
-        style="min-width: 18rem;"
-      >
-        <div class="card-title card-header text-center">
-          <div class="text-center">{{ equip.name }}</div>
-        </div>
-        <div class="card-body">
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">
-              <b>Type</b>:
-              <span style="float: right;">{{ equip.slotType }}</span>
-            </li>
-            <li *ngIf="equip.requirements" class="list-group-item">
-              <b>Requirement:</b>
-              <div
-                *ngFor="
-                  let requirement of equip.requirements | keyvalue: asIsOrder
+<form class="row text-center justify-content-center">
+  <div class="form-group col-xs-4 col-md-1">
+      <div for="strreq" class="control-label">STR</div>
+      <input
+      (input)="onChangeStrengthFilter($event.target.value)"
+      class="form-control">
+  </div>
+  <div class="form-group col-xs-4 col-md-1">
+      <div for="agireq" class="control-label">AGI</div>
+      <input
+      (input)="onChangeAgilityFilter($event.target.value)"
+      class="form-control">
+  </div>
+  <div class="form-group col-xs-4 col-md-1">
+      <div for="vitreq" class="control-label">VIT</div>
+      <input
+      (input)="onChangeVitalityFilter($event.target.value)"
+      class="form-control">
+  </div>
+  <div class="form-group col-xs-4 col-md-1">
+    <div for="wisreq" class="control-label">WIS</div>
+    <input
+    (input)="onChangeWisdomFilter($event.target.value)"
+    class="form-control">
+</div>
+<div class="form-group col-xs-4 col-md-1">
+    <div for="willreq" class="control-label">WILL</div>
+    <input
+    (input)="onChangeWillFilter($event.target.value)"
+    class="form-control">
+</div>
+<div class="form-group col-xs-4 col-md-1">
+    <div for="lvlreq" class="control-label">LVL</div>
+    <input
+    (input)="onChangeLevelFilter($event.target.value)"
+    class="form-control">
+</div>
+</form>
+
+<div class="row">
+  <div *ngFor="let equip of equipment">
+    <div
+      *ngIf="!isFiltered(equip.slotType) && meetsRequirements(equip)"
+      class="card text-black bg-dark border-primary ml-3 mb-3"
+      style="min-width: 18rem;"
+    >
+      <div class="card-title card-header text-center">
+        <div class="text-center">{{ equip.name }}</div>
+      </div>
+      <div class="card-body">
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            <b>Type</b>:
+            <span style="float: right;">{{ equip.slotType }}</span>
+          </li>
+          <li *ngIf="equip.requirements" class="list-group-item">
+            <b>Requirement:</b>
+            <div
+              *ngFor="
+                let requirement of equip.requirements | keyvalue: asIsOrder
+              "
+            >
+              {{ requirement.key }}:
+              <span style="float: right;">{{ requirement.value }}</span>
+            </div>
+          </li>
+          <li *ngIf="equip.statModifiers" class="list-group-item">
+            <b>Stat Modifier:</b>
+            <div
+              *ngFor="
+                let statModifier of equip.statModifiers | keyvalue: asIsOrder
+              "
+            >
+              {{ statModifier.key }}:<span style="float: right;">{{
+                statModifier.value
+              }}</span>
+            </div>
+          </li>
+          <li *ngIf="equip.touchStrikes" class="list-group-item">
+            <b>Touchstrike:</b>
+            <div
+              *ngFor="
+                let touchStrikes of equip.touchStrikes | keyvalue: asIsOrder
+              "
+            >
+              {{ touchStrikes.key }}
+            </div>
+          </li>
+          <li *ngIf="equip.killers" class="list-group-item">
+            <b>Killer:</b>
+            <div *ngFor="let killer of equip.killers | keyvalue: asIsOrder">
+              <div *ngIf="killer.value">{{ killer.key }} killer</div>
+            </div>
+          </li>
+          <li *ngIf="equip.statusImmunities" class="list-group-item">
+            <b>Status Immunity:</b>
+            <div
+              *ngFor="
+                let statusImmunity of equip.statusImmunities
+                  | keyvalue: asIsOrder
+              "
+            >
+              <div *ngIf="statusImmunity.value">{{ statusImmunity.key }}</div>
+            </div>
+          </li>
+          <li *ngIf="equip.empowerElements" class="list-group-item">
+            <b>Empower Element:</b>
+            <div
+              *ngFor="
+                let empowerElement of equip.empowerElements
+                  | keyvalue: asIsOrder
+              "
+            >
+              <div *ngIf="empowerElement.value">{{ empowerElement.key }}</div>
+            </div>
+          </li>
+          <li *ngIf="equip.elementalDefenses" class="list-group-item">
+            <b>Element Resistance</b>
+            <div
+              *ngFor="
+                let elementalDefense of equip.elementalDefenses
+                  | keyvalue: asIsOrder
+              "
+            >
+              <span
+                *ngIf="
+                  elementalDefense.value > 0 && elementalDefense.value < 100
                 "
+                >{{ elementalDefense.key }} ward:</span
               >
-                {{ requirement.key }}:
-                <span style="float: right;">{{ requirement.value }}</span>
-              </div>
-            </li>
-            <li *ngIf="equip.statModifiers" class="list-group-item">
-              <b>Stat Modifier:</b>
-              <div
-                *ngFor="
-                  let statModifier of equip.statModifiers | keyvalue: asIsOrder
-                "
+              <span *ngIf="elementalDefense.value < 0">
+                {{ elementalDefense.key }} weak:</span
               >
-                {{ statModifier.key }}:<span style="float: right;">{{
-                  statModifier.value
-                }}</span>
-              </div>
-            </li>
-            <li *ngIf="equip.touchStrikes" class="list-group-item">
-              <b>Touchstrike:</b>
-              <div
-                *ngFor="
-                  let touchStrikes of equip.touchStrikes | keyvalue: asIsOrder
-                "
+              <span *ngIf="elementalDefense.value == 100">
+                {{ elementalDefense.key }} absorb:</span
               >
-                {{ touchStrikes.key }}
+              <span style="float: right;">{{ elementalDefense.value }}</span>
+            </div>
+          </li>
+          <li *ngIf="equip.autos" class="list-group-item">
+            <b>Automatic Effects:</b>
+            <div *ngFor="let auto of equip.autos | keyvalue: asIsOrder">
+              <div *ngIf="auto.value">{{ auto.key }}</div>
+            </div>
+          </li>
+          <li *ngIf="equip.abilityModifiers" class="list-group-item">
+            <b>Ability Modifiers:</b>
+            <div
+              *ngFor="
+                let abilityModifier of equip.abilityModifiers
+                  | keyvalue: asIsOrder
+              "
+            >
+              <div *ngIf="abilityModifier.value">
+                {{ abilityModifier.key }}
               </div>
-            </li>
-            <li *ngIf="equip.killers" class="list-group-item">
-              <b>Killer:</b>
-              <div *ngFor="let killer of equip.killers | keyvalue: asIsOrder">
-                <div *ngIf="killer.value">{{ killer.key }} killer</div>
-              </div>
-            </li>
-            <li *ngIf="equip.statusImmunities" class="list-group-item">
-              <b>Status Immunity:</b>
-              <div
-                *ngFor="
-                  let statusImmunity of equip.statusImmunities
-                    | keyvalue: asIsOrder
-                "
-              >
-                <div *ngIf="statusImmunity.value">{{ statusImmunity.key }}</div>
-              </div>
-            </li>
-            <li *ngIf="equip.empowerElements" class="list-group-item">
-              <b>Empower Element:</b>
-              <div
-                *ngFor="
-                  let empowerElement of equip.empowerElements
-                    | keyvalue: asIsOrder
-                "
-              >
-                <div *ngIf="empowerElement.value">{{ empowerElement.key }}</div>
-              </div>
-            </li>
-            <li *ngIf="equip.elementalDefenses" class="list-group-item">
-              <b>Element Resistance</b>
-              <div
-                *ngFor="
-                  let elementalDefense of equip.elementalDefenses
-                    | keyvalue: asIsOrder
-                "
-              >
-                <span
-                  *ngIf="
-                    elementalDefense.value > 0 && elementalDefense.value < 100
-                  "
-                  >{{ elementalDefense.key }} ward:</span
-                >
-                <span *ngIf="elementalDefense.value < 0">
-                  {{ elementalDefense.key }} weak:</span
-                >
-                <span *ngIf="elementalDefense.value == 100">
-                  {{ elementalDefense.key }} absorb:</span
-                >
-                <span style="float: right;">{{ elementalDefense.value }}</span>
-              </div>
-            </li>
-            <li *ngIf="equip.autos" class="list-group-item">
-              <b>Automatic Effects:</b>
-              <div *ngFor="let auto of equip.autos | keyvalue: asIsOrder">
-                <div *ngIf="auto.value">{{ auto.key }}</div>
-              </div>
-            </li>
-            <li *ngIf="equip.abilityModifiers" class="list-group-item">
-              <b>Ability Modifiers:</b>
-              <div
-                *ngFor="
-                  let abilityModifier of equip.abilityModifiers
-                    | keyvalue: asIsOrder
-                "
-              >
-                <div *ngIf="abilityModifier.value">
-                  {{ abilityModifier.key }}
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <div class="card-footer text-center">
-          <b>Location:</b> {{ equip.location }}
-        </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="card-footer text-center">
+        <b>Location:</b> {{ equip.location }}
       </div>
     </div>
   </div>
